# catapult

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
scripts/: bump-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  hardware.rs  huggingface.rs  lib.rs  models.rs  runtime.rs  server.rs  tui_main.rs
src-tauri/src/tui/: app.rs  event.rs  mod.rs  params.rs  server_ctl.rs
src-tauri/src/tui/tabs/: chat.rs  dashboard.rs  logs.rs  mod.rs  models.rs  runtime.rs  server.rs
src-tauri/src/tui/widgets/: autocomplete.rs  mod.rs  progress.rs
src/components/: Layout.tsx
src/pages/: Dashboard.tsx  Models.tsx  Runtime.tsx  Server.tsx  Wizard.tsx
src/styles/: globals.css
src/types/: index.ts
src/utils/: format.test.ts  format.ts
