[package]
name = "catapult"
version = "0.1.0"
description = "A llama.cpp launcher"
authors = []
edition = "2021"

[lib]
name = "catapult_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "catapult-tui"
path = "src/tui_main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

anyhow = "1"
thiserror = "1"
log = "0.4"

ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
tui-input = "0.11"

dirs = "5"
zip = "0.6"
tar = "0.4"
flate2 = "1"

sysinfo = "0.32"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
url = "2"
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
